# multi-asteroids

./: .gitignore  CMakeLists.txt  Makefile  build.sh  compile_commands.json  env.txt
backups/: game_player.c  game_player.h
client/: clien.c  client.c  client.h  game.c  game.h  game_player.c  game_player.h  game_ui.c  game_ui.h  netif.c  netif.h
cmake/: CopyCompileCommands.cmake
server/: buffer_control.c  buffer_control.h  game.c  game.h  game_player.c  game_player.h  game_ui.h  main.c  serve.c  server.c  server.h
src/: asteroid.c  asteroid.h  clien.c  client.c  client.h  constants.h  debug.c  debug.h  debug_cones.c  game.h  game_asteroids.c  game_asteroids.h  game_player.c  game_projectiles.c  game_projectiles.h  game_score.c  game_score.h  main.c  netif.c  netif.h  player.c  player.h  projectile.c  projectile.h  raygui.h  serve.c  server.c  server.h  winsock_compat.h
